--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories("ext/SFML/include/")	# добавляем директори
 include_directories("inc/")
 link_directories("ext/SFML/lib/")	
 
-add_executable("${PROJECT_NAME}" main.cpp Ball.hpp Ball.cpp Game.hpp Game.cpp
+add_executable("${PROJECT_NAME}" BouncingGame.cpp Ball.hpp Game.hpp
 		
 )
 											
